# call_me_maybe

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
data/input/: function_calling_tests.json
data/output/: function_calling_results.json  function_calls.json
src/: Arguments.py  Function.py  __main__.py  helper.py  parsing.py  selector.py  test.py
